--- a/pitstop-webapp/.gitlab-ci.yml
+++ b/pitstop-webapp/.gitlab-ci.yml
@@ -1,13 +1,89 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/pipeline/#customization
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-- test
-sast:
-  stage: test
+  - install
+  - build
+  - test
+  - build-push-image
+  - scan-image-docker
+
+variables:
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  
+  GIT_DEPTH: "0" 
+
 include:
+- template: Security/Dependency-Scanning.gitlab-ci.yml
 - template: Security/SAST.gitlab-ci.yml
+- template: Security/Container-Scanning.gitlab-ci.yml
+
+default:
+  image: node:16
+
+install_Dependencies:
+  stage: install
+  script:
+    - npm install
+
+build-frontend:
+  stage: build
+  script:
+    - echo "Building frontend application"
+    - npm install
+    - npm run build
+
+sonarcloud-check:
+  stage : test
+  image:
+    name: sonarsource/sonar-scanner-cli:latest
+    entrypoint: [""]
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - sonar-scanner
+  only:
+    - merge_requests
+    - main
+    - develop
+
+gemnasium-dependency_scanning:
+    stage: test
+    tags: [ saas-linux-large-amd64 ]
+    rules:
+        - if: $CI_COMMIT_BRANCH == "main"
+        - if: $CI_MERGE_REQUEST_IID
+
+build-image-Frontend: 
+  stage: build-push-image
+  image: docker:20.10.11-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
+  services:
+    - docker:20.10.11-dind
+  before_script:
+    - mkdir -p /root/.docker
+    - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"username\":\"$DOCKERHUB_USERNAME\",\"password\":\"$DOCKERHUB_PASSWORD\"}}}" > /root/.docker/config.json
+    - echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+  script:
+    - echo "Building Docker image for the  webApp"
+    - docker build -t brahim02/webapp_microservices:1.0.0 .
+    - docker push brahim02/webapp_microservices:1.0.0
+
+
+container_scanning:
+  stage: scan-image-docker
+  script:
+    - echo "Running container scanning job for the webapp"
+  variables:
+    CS_IMAGE: brahim02/webapp_microservices:1.0.0
+
+snyk_image_scan:
+  stage: scan-image-docker
+  image:
+    name: snyk/snyk:docker
+    entrypoint: [""]
+  script:
+    - echo "Scanning Docker image with Snyk"
+    - snyk auth $SNYK_TOKEN
+    - snyk test --docker brahim02/webapp_microservices:1.0.0 || true
+  dependencies:
+    - build-image-Frontend
